--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "messenger-webhook",
-  "version": "1.0.0",
-  "description": "uet chatbot",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
-  "author": "LeVietThang",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "nexmo": "^2.4.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "firebase-admin": "^8.2.0",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
