--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.16.2",
     "firebase-admin": "^8.2.0",
     "http-errors": "~1.6.3",
+    "is-image-url": "^1.1.8",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "serve-favicon": "^2.5.0"
   }
 }
